editor page basics

--- a/zapbook/src/viewpage.css
+++ b/zapbook/src/viewpage.css
@@ -1,8 +1,49 @@
 .imp{
-
     background-color: rgba(255, 255, 0, 0.52);
 }
+  .imp .fa-plus, .todo .fa-plus, .list .fa-plus{
+      transform: rotateZ(45deg);
+  }
+.imp::before{
+    content: "Important";
+}
+.todo{
+    background-color: rgba(0, 195, 255, 0.52);
+}
+.todo::before{
+    content: "Todo";
+}
+.list{
+    background-color: rgba(115, 255, 0, 0.52);
+}
+.list::before{
+    content: "List";
+}
+.title{
+    padding: 1px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    border-radius: 8px;
+}
+
 .title_tag:after{
         display: inline-block;
-        content: "\00d7"; 
 }
+.title_tag {
+    position: relative;
+    display: inline-block;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  }
+  
+  .tagss {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+  }
+  
+  .title_tag:hover .tagss {
+    display: block;
+  }
