--- a/zapbook/src/listview.css
+++ b/zapbook/src/listview.css
@@ -2,6 +2,15 @@
     background-color: #6b3eda;
     padding: 10px;
 }
+.fa-trash-alt:hover{
+  color:rgb(250, 60, 34);
+}
+.fa-edit:hover{
+    color: rgb(21, 122, 1);
+}
+.fa-share-square:hover{
+ color:blue;
+}
 .descriptions{
     border-width: 1px;
     border-color: black;
@@ -18,4 +27,21 @@
 .List{
     background-color: rgba(14, 109, 218, 0.616);
     box-shadow: 0px 0px 20px 3px rgba(0, 72, 155, 0.616);
+}
+/* !confirmation badge css */
+.cf_body{
+    position: absolute;
+    background-color: rgba(245, 245, 245, 0.548);
+    margin-right: 20px;
+    border-radius: 10px;
+    top: 80px;
+    right: 0;
+    /* backdrop-filter: blur(20px); */
+    z-index: 222;
+    height: 80px;
+    width: auto;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-left-color: #e91818c9;
+    border-left-width: 5px;
 }
