--- a/zapbook/src/viewpage.css
+++ b/zapbook/src/viewpage.css
@@ -1,15 +1,15 @@
-.imp .fa-plus, .todo .fa-plus, .list .fa-plus{
+.important .fa-plus, .Todo .fa-plus, .List .fa-plus{
       transform: rotateZ(45deg);
   }
-.imp::before{
+/* .important::before{
     content: "Important";
 }
-.todo::before{
+.Todo::before{
     content: "Todo";
 }
-.list::before{
+.List::before{
     content: "List";
-}
+} */
 .title{
     max-width: 50%;
     overflow: hidden;
@@ -17,7 +17,7 @@
     /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
     border-radius: 8px;
 }
-
+/* 
 .title_tag:after{
         display: inline-block;
 }
@@ -37,9 +37,14 @@
     padding: 12px 16px;
     z-index: 1;
   }
-  
 .title_tag:hover .tagss {
     display: block;
+  } */
+  .tagss{
+      min-width: 10px;
+      max-width: 100px;
+      max-height: 20px;
+      overflow: hidden;
   }
 .area{
     height:fit-content;
