--- a/zapbook/src/viewpage.css
+++ b/zapbook/src/viewpage.css
@@ -40,7 +40,7 @@
 .title_tag:hover .tagss {
     display: block;
   } */
-  .tagss{
+  .tagu{
       min-width: 10px;
       max-width: 100px;
       max-height: 20px;
