--- a/zapbook/src/listview.css
+++ b/zapbook/src/listview.css
@@ -18,7 +18,7 @@
     border-color: black;
     border-style:dashed;
 }
-.important{
+.important , .Important{
     background-color: rgba(31, 228, 13, 0.616);
     box-shadow: 0px 0px 20px 1px rgba(16, 175, 2, 0.616);
 }
