--- a/zapbook/src/home.css
+++ b/zapbook/src/home.css
@@ -34,3 +34,11 @@
     color:#00b7ff;
     box-shadow: 0px 0px 30px 1px #00b7ff;
 }
+@media only screen and (max-width: 600px) {
+    .linkss {
+      width: 90%;
+    }
+    .cldimg{
+        width: 90%;
+    }
+  }
