--- a/zapbook/src/navbar.css
+++ b/zapbook/src/navbar.css
@@ -1,6 +1,6 @@
 .navlist{
     background-color: rgba(255, 255, 255, 0.863);
-    width: 80%;
+    width: 90%;
 }
 li{
     margin-left: 10px;
@@ -185,4 +185,7 @@ input[type=text]::placeholder , input[type=password]::placeholder , input[type=e
 }
 i{
   background: none;
+}
+@media only screen and (max-width: 600px) {
+
 }
